test/invalid/KeywordsCapitalLetterIf/KeywordsCapitalLetterIf.plume
/**
 * Keyword com letra maiuscula: if
 *
 * @author 37059, Rita Henriques
 * @version $Id: KeywordsCapitalLetterIf.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
 class KeywordsCapitalLetterIf extends Object is
 
  method main : () -> String is
		getTempo(1).toString()

  method getTempo : (tempo : Integer) -> String is
		If tempo == 0
		then "Sol"
		else "Chuva"

